--- a/assets/css/custom-ar.css
+++ b/assets/css/custom-ar.css
@@ -1,13 +1,11 @@
 @font-face {
-  font-family: 'almarai';
-  src: url('/assets/fonts/Almarai-Bold.ttf');
+  font-family: "almarai";
+  src: url("assets/fonts/Almarai-Bold.ttf");
 }
-
 
 .align-right-text {
   text-align: right;
 }
-
 
 .align-left-text {
   text-align: left;
@@ -20,14 +18,14 @@
   float: right;
 }
 
-.align-right-2{
- margin-left: 0;
+.align-right-2 {
+  margin-left: 0;
 }
 
-.font-almarai{
-  font-family: 'almarai';
+.font-almarai {
+  font-family: "almarai";
 }
 
-.margin-3{
+.margin-3 {
   margin: 3%;
 }
