--- a/assets/css/custom-ar.css
+++ b/assets/css/custom-ar.css
@@ -1,4 +1,3 @@
-
 .align-right-text {
   text-align: right;
 }
@@ -31,11 +30,32 @@
   src: url("../fonts/Almarai-Bold.ttf");
 }
 
-
-
 @media (max-width: 768px) {
-  .align-left-text{
+  .align-left-text {
     text-align: right;
   }
+}
 
+.grid-container-ar {
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(250px, 1fr)
+  );
+  grid-gap: 25px;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  direction: rtl;
+}
+
+@media (max-width: 768px) {
+  .grid-container-ar {
+    display: grid;
+    /* Center vertically */
+    grid-template-columns: 1fr; /* Single column layout for smaller screens */
+    grid-gap: auto; /* Adjust the gap between items as needed */
+    margin: 50px;
+    direction: ltr;
+  }
 }
