--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,7 +1,5 @@
 ﻿/* Place Your Custom Styles Here */
 
-
-
 .video {
   display: block;
   margin: 0 auto;
@@ -31,7 +29,7 @@
 
 .video {
   width: 100%;
- 
+
   object-fit: cover;
   overflow: hidden;
   object-fit: initial; /* Use "initial" to maintain the video's aspect ratio */
@@ -186,8 +184,6 @@
 .icons-phone {
 }
 
-
-
 .fa {
   padding: 20px;
   font-size: 30px;
@@ -216,20 +212,19 @@
   color: white;
 }
 
-
 .tiktok-icon {
   color: white;
   width: 20px;
 }
-.loader-color{
+.loader-color {
   color: #470f2c;
 }
 
-.margin-left-5{
+.margin-left-5 {
   margin-left: 5%;
 }
 
-.margin-right-5{
+.margin-right-5 {
   margin-right: 5%;
 }
 
@@ -249,22 +244,75 @@
   transition: opacity 0.3s ease-in-out, background-size 0.3s ease-in-out;
 }
 
-.image-partners{
+.image-partners {
   object-fit: cover;
   width: 100%;
 }
 
-.padding-0{
+.padding-0 {
   padding: 0px;
 }
 
-@media (max-width: 768px) {
 
-  .video{
+.swiper {
+  width: 100%;
+  height: 100vh;
+
+
+}
+
+.swiper-slide img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper .swiper-button-prev,
+.swiper .swiper-button-next {
+  color: white;
+  margin: 10px;
+}
+
+
+
+.swiper .swiper-pagination-bullet {
+  background-color: white;
+  
+  
+}
+.swiper .swiper-pagination-bullet-active {
+  background-color: antiquewhite;
+
+}
+
+.swiper-overlay {
+  background-color: rgba(0, 0, 0, 0.7) !important; /* Use a semi-transparent black background */
+  opacity: .3; /* You can keep opacity at 1 if you want the overlay to be fully visible */
+}
+
+.image-full-size{
+object-fit: cover;
+  
+}
+
+
+.with-gradient {
+  position: relative;
+}
+.with-gradient:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.3));
+}
+@media (max-width: 768px) {
+  .video {
     height: 100%;
   }
 
-  
   .grid-container {
     display: grid;
     /* Center vertically */
@@ -282,4 +330,13 @@
     text-align: right;
     margin-right: 0px;
   }
+
+  .swiper .swiper-button-prev,
+.swiper .swiper-button-next {
+  color: transparent
+  
+
 }
+
+}
+
