--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -87,19 +87,17 @@
   margin: auto;
   padding: 0%;
 }
+
 .bg-image1 {
-  height: 100%;
-  display: block;
-  margin: 0;
-  max-width: 100%;
   object-fit: cover;
-  position: absolute;
-  border-radius: 10px;
-  transition: transform 0.3s ease-in-out;
+  width: 100%;
+  height: 100%;
+  transform: scale(1.1);
+  transition: transform 0.2s ease-in-out;
 }
 
 .custom-container:hover .bg-image1 {
-  transform: scale(1.1);
+  transform: scale(1.3);
 }
 
 .bg-color1 {
@@ -236,7 +234,6 @@
   object-fit: cover;
   width: 230px;
   height: 130px;
-  padding: 10px;
   border-radius: 10px;
   display: flex;
   justify-content: center;
@@ -244,24 +241,33 @@
   transition: opacity 0.3s ease-in-out, background-size 0.3s ease-in-out;
 }
 
+.partners-container-overlay {
+  opacity: .5;
+  background-color:rgba(0, 0, 0, 0.7);
+  border-radius: 10px;
+
+}
+
+.partners-container-overlay:hover {
+  opacity: 1;
+}
+
 .image-partners {
   object-fit: cover;
   width: 100%;
+  background-color: white;
 }
 
 .padding-0 {
   padding: 0px;
 }
 
-
 .swiper {
   width: 100%;
   height: 100vh;
-
-
 }
 
-.swiper-slide img{
+.swiper-slide img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -273,41 +279,93 @@
   margin: 10px;
 }
 
-
-
 .swiper .swiper-pagination-bullet {
   background-color: white;
-  
-  
 }
 .swiper .swiper-pagination-bullet-active {
   background-color: antiquewhite;
-
 }
 
 .swiper-overlay {
-  background-color: rgba(0, 0, 0, 0.7) !important; /* Use a semi-transparent black background */
-  opacity: .3; /* You can keep opacity at 1 if you want the overlay to be fully visible */
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.7
+  ) !important; /* Use a semi-transparent black background */
+  opacity: 0.3; /* You can keep opacity at 1 if you want the overlay to be fully visible */
 }
 
-.image-full-size{
-object-fit: cover;
-  
+.image-full-size {
+  object-fit: cover;
 }
-
 
 .with-gradient {
   position: relative;
 }
 .with-gradient:before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.3));
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
 }
+
+.icons-end {
+  width: 100%;
+  margin-top: 20px;
+  line-height: 1;
+  color: #fff;
+  transition: bottom 0.7s cubic-bezier(0.54, 0.18, 0.36, 0.81),
+    color 0.7s cubic-bezier(0.54, 0.18, 0.36, 0.81);
+  z-index: 100;
+  text-align: center;
+}
+
+.icons-end a {
+  font-size: 18px;
+  text-align: center;
+  transition: opacity 0.3s ease-out;
+}
+.icons-end ul {
+  margin: 0 auto; /* Center-align the list horizontally */
+  padding: 0;
+  display: inline-block;
+}
+
+.icons-end a,
+.icons-end a i,
+.icons-end a:hover,
+.icons-end a:hover i {
+  color: inherit;
+}
+
+.icons-end ul:hover a {
+  opacity: 0.54;
+}
+.icons-end ul:hover a:hover {
+  opacity: 1;
+}
+
+.icons-end li {
+  display: inline;
+
+  margin-right: 15px;
+}
+
+.width-100 {
+  width: 100%;
+}
+
+.copyright-text {
+  color: white;
+  size: 20px;
+  text-align: center;
+  margin: 5px;
+}
+
 @media (max-width: 768px) {
   .video {
     height: 100%;
@@ -332,11 +390,7 @@ object-fit: cover;
   }
 
   .swiper .swiper-button-prev,
-.swiper .swiper-button-next {
-  color: transparent
-  
-
+  .swiper .swiper-button-next {
+    color: transparent;
+  }
 }
-
-}
-
